libycp/testsuite/tests/types/Typedef.ycp
{
  // defined types
  typedef myType list(string);
  myType mt = ["a","b"];
  return mt;
}

{
  // defined types
  typedef myType list(path);
  myType mt = [.p.a.t.h];
  // implicit return; (void)
}

{
  // defined types
  typedef myType list(list(path));
  myType mt = [.p.a.t.h];	// error
}


